test/cases/compile_errors/invalid_underscore_placement_in_float_literal-7.zig
fn main() void {
    var bad: f128 = 1.0e-1_;
    _ = bad;
}

// error
//
// :2:27: error: trailing digit separator
